// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Certificate (Non Penn Labs Chart) -- Success 1`] = `
[
  {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/name": "pennlabs-org",
      },
      "name": "pennlabs-org",
    },
    "spec": {
      "dnsNames": [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;

exports[`Certificate -- Success 1`] = `
[
  {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennlabs-org",
      },
      "name": "pennlabs-org",
    },
    "spec": {
      "dnsNames": [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;
